      filtertest: Add support for stdin as "-" to the -F option.
      Rename CMake option to ENABLE_PROTOCHAIN to match Autoconf.
      Remove the "disable IPv6" build option.
      translatetest: Add a test program for various translation functions.
      Autoconf: Add QNX support to AC_LBL_LIBRARY_NET().
      capturetest: Treat SA_RESTART as optional.
    Hurd:
      Support network capture devices too.
      Fix a few device activation bugs.
      Count and timestamp packets better.
      Add kernel filtering, fix userland filtering.
    FreeBSD:
      Handle USB devices correctly on FreeBSD-CURRENT as of 2025-12.
    OpenBSD:
      Use getprotobyname_r() correctly on OpenBSD.
    Linux:
      Do not use ether_hostton() from musl libc.
      Fix propagation of getprotobyname_r() errors.
      Don't treat permission failures trying to fetch connection status
        as errors, just indicate connection status unknown.
    Haiku:
      Look for ethers(5) in /boot/system/settings/network/.
    DAG:
      Always set PCAP_IF_CONNECTION_STATUS_NOT_APPLICABLE.
      In dag_findalldevs() handle known errors better.
      Trust dag_get_stream_erf_types() to be available.
      Require the API to have 64-bit streams support.
      Make device descriptions more useful, make dagN conditional.
      Use PCAP_ERROR_NO_SUCH_DEVICE more in dag_activate().
      Validate capture device names better.
      Enumerate streams without trying to lock them.
      If the environment variable ERF_FCS_BITS is set, require it to be either
        0 or 16 or 32.  Likewise for ERF_DONT_STRIP_FCS (either 0 or 1).
      Remove FCS quirks specific to 4.2S and 4.23S.
      Fix packet filtering with low snaplen.
      Fix ps_drop for stream drop counters.
      Add experimental packet transmit support.
    SNF:
      Fix packet filtering with low snaplen.
      Require SNF_VERSION_API >= 0x0003.
      Improve device descriptions and flags.
      Fill pcap_if_t in more consistently.
    Netmap: