@@ -466,7 +466,6 @@ nid:	  ID			{ CHECK_PTR_VAL($1); CHECK_PTR_VAL(($$.b = gen_scode(cstate, $1, $$.
 					bpf_set_error(cstate, "'protochain' qualifier applied to IPv4 address and prefix length");
 					YYABORT;
 				  }
-				  /* The default case in gen_mcode() catches Q_HOST and Q_GATEWAY. */
 				  CHECK_PTR_VAL(($$.b = gen_mcode(cstate, $1, NULL, $3, $$.q)));
 				}
 	| HID NETMASK HID	{
@@ -486,7 +485,6 @@ nid:	  ID			{ CHECK_PTR_VAL($1); CHECK_PTR_VAL(($$.b = gen_scode(cstate, $1, $$.
 					bpf_set_error(cstate, "'protochain' qualifier applied to IPv4 address and netmask");
 					YYABORT;
 				  }
-				  /* The default case in gen_mcode() catches Q_HOST and Q_GATEWAY. */
 				  CHECK_PTR_VAL(($$.b = gen_mcode(cstate, $1, $3, 0, $$.q)));
 				}
 	| HID			{
@@ -525,7 +523,6 @@ nid:	  ID			{ CHECK_PTR_VAL($1); CHECK_PTR_VAL(($$.b = gen_scode(cstate, $1, $$.
 					bpf_set_error(cstate, "'protochain' qualifier applied to IPv6 address and prefix length");
 					YYABORT;
 				  }
-				  /* The default case in gen_mcode6() catches Q_GATEWAY. */
 				  CHECK_PTR_VAL(($$.b = gen_mcode6(cstate, $1, $3, $$.q)));
 				}
 	| HID6			{
@@ -545,7 +542,6 @@ nid:	  ID			{ CHECK_PTR_VAL($1); CHECK_PTR_VAL(($$.b = gen_scode(cstate, $1, $$.
 					bpf_set_error(cstate, "'protochain' qualifier applied to IPv6 address");
 					YYABORT;
 				  }
-				  /* The default case in gen_mcode6() catches Q_GATEWAY. */
 				  CHECK_PTR_VAL(($$.b = gen_mcode6(cstate, $1, 128, $$.q)));
 				}
 	| EID			{ CHECK_PTR_VAL($1); CHECK_PTR_VAL(($$.b = gen_ecode(cstate, $1, $$.q = $<blk>0.q))); }
